@@ -1,5 +1,6 @@
 DIST squashed-portage-0.11.tar.xz 5544 SHA256 0ffa37d22da440629aef8f321155f9ae8b8241dd7b39c47e41fd1c273d6a476d SHA512 193358db80e5ebfa81e777f81df8da4bb4839549e7b93dcccc731687346e899dfe15af62855d327c0abba9b3f3d6da8cf978abbc5291be9c8733b538858ff518 WHIRLPOOL 2f23999096bf0b730a00d4526ccd69a9953e16886cdaabe59e8f849a332b5e69e2a3470467e30fdbcbdf19c2813f76b76a86495d10030c98dad41552dffb5752
 DIST squashed-portage-0.12.tar.xz 5516 SHA256 04ab33165812f70ce290e41770dc98334ebeda6707e85d7eaa5221f71d451855 SHA512 c03fcb42be077d30cdcc4c16fe0d7b8f2537c0877e087eef2c087aa1e9659241e835aad385e12b9adf8cdff60cefb008402bda1c5cc1e7e4e42bc38d337f88f7 WHIRLPOOL 9b8cae5171b68a24e27bd922e767ec5917b3de69242489dce92368490ad40d54b8d2a7fac4f291f1464c8a770cd4d02e6b57745ae96dedf353e94cb5ce0f4e18
 DIST squashed-portage-0.13.tar.xz 5484 SHA256 332a58c5b0217c2051c5416cb571816e5cf1d422c6636da30ffa10e05b3f000d SHA512 1bb967096a11e101ccf514c45cb0d2454be6f50e87730b8469f006f67ff7b4238b75cd8978cc2a56e458fd6002c83b02b7bcb920c337d93865a6cf7db4356a9e WHIRLPOOL 0768a082facd652ce85694d4303cae9b76dcbd06df7fcc6caa6564b2c1d76496b6bd26aeddc2aee4998ee40a7494eebe33a7305e66f98fe6457e58a5d13a2b7b
+DIST squashed-portage-0.14.tar.xz 5528 SHA256 cdac554872a4df37299c92c810b280728bb78eae8dba8b44814890f8b21ab8ad SHA512 968a49a1a1a283a730b629f6fef31c8e7899384c05c27bfb31160cad0a8f6a07175e298058384ccea69d6e5c847cbf2a3035d01606757e65333af89478b26cd8 WHIRLPOOL a412592feb33464479a485a72008ce9ba10b4226e6f8fd8003c79f84181aaedfa085a8bdc21b67bfbc2a1ac5335cd3fb67204bc489a8c50e5e9d58848e1bf86b
 DIST squashed-portage-0.8.tar.xz 4620 SHA256 0d5f0193070610fcfdea903b64563480cb7fc5dd8811e3c5d49952c5e8213f1c SHA512 6a0e9fcc8cb2e823cad20303e265032b527d1c06ce59df10df2db7bff19e05b76d4e54d7fef8fcac8101ca5b24038d235278ae8980e65cce6bce86a35dec7271 WHIRLPOOL 161f83e943b6ce1544b9733b24179c48fefbbf8a75f564d6a842246dce1cf03bbd6dbca71604ffc469d13cbdf71beb1a2dad622cfb0b4b98e0951a440bb1481a
 DIST squashed-portage-0.9.tar.xz 5452 SHA256 2e0e0acfe8e30e6a0eabe229159f0a27ee3f7a45b989153db0c99292d696b3f8 SHA512 bfd17b0756b5e64d1c193934e6909db11c42a7c89cc206bd4a33e0653c9b96ce3f190c2fd597b5958cf784ee2c19de7b80a9a892511d7c25d3364f5540ce6cc7 WHIRLPOOL 9de6d6c5526f4147c9ffdf70057ef571181a78b91488161d324fc4d6f211dd90d6724fee8dbd42173b33e0ccf14512dfbd739dcd7ae1f0d9343f381a86913421
